move the page gradient to the left to avoid the scrollbar gutter problem

--- a/static/sass/_theme.scss
+++ b/static/sass/_theme.scss
@@ -389,8 +389,8 @@ h5,
 			position: absolute;
 			top: 0;
 			bottom: 0;
-			left: auto;
-			right: 0;
+			left: 0;
+			right: auto;
 			width: 0.1875em; /* 3px /16 */
 			background-image: linear-gradient(238deg, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00, #00ff80, #00ffff, #0080ff, #0000ff, #8000ff, #ff0080);
 			min-height: 100vh;
